src/test/deca/context/invalid/test_pass_3_mod_not_int_left.deca
// Description:
//    Program testing that we can not use op mod on non int type (left operand)
//
// Results:
//    error
//
// History:
//    Created on 9/01/2025

{
    int a = 4.5 % 5;
}
